--- a/TestManager/WebContent/WEB-INF/web.xml
+++ b/TestManager/WebContent/WEB-INF/web.xml
@@ -38,7 +38,7 @@
 
 	<servlet-mapping>
 		<servlet-name>spring-web</servlet-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>/springrest/*</url-pattern>
 	</servlet-mapping>
   
 </web-app>
